--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=AddressBook
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
+spring.datasource.url=jdbc:mysql://localhost:3306/addressbook
 spring.datasource.username=root
 spring.datasource.password=Jagratidixit@5600
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
